--- a/app/app.css
+++ b/app/app.css
@@ -1,5 +1,17 @@
 /* app css stylesheet */
 
+h1 {
+  text-align: center;
+}
+
+.reactionCard {
+
+  margin-bottom: 20px;
+  margin-top: 20px;
+  text-align: center;
+
+}
+
 .menu {
   list-style: none;
   border-bottom: 0.1em solid black;
