--- a/app/app.css
+++ b/app/app.css
@@ -1,42 +1,30 @@
 /* app css stylesheet */
 
-h1 {
-  text-align: center;
-}
+
 
 .reactionCard {
 
   margin-bottom: 20px;
   margin-top: 20px;
-  text-align: center;
+  text-align: left;
 
 }
 
-.menu {
-  list-style: none;
-  border-bottom: 0.1em solid black;
-  margin-bottom: 2em;
-  padding: 0 0 0.5em;
+.jumbotron {
+  position: relative;
+  /*overflow: hidden;*/
+  height: 200px;
+  
 }
 
-.menu:before {
-  content: "[";
+
+
+h1 {
+  position: relative;
+  z-index: 2;
+  color: #000;
+  margin: 0 !important;
+  padding-bottom: 0 !important;
+  border: 0 !important;
 }
 
-.menu:after {
-  content: "]";
-}
-
-.menu > li {
-  display: inline;
-}
-
-.menu > li:before {
-  content: "|";
-  padding-right: 0.3em;
-}
-
-.menu > li:nth-child(1):before {
-  content: "";
-  padding: 0;
-}
