--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,22 +1,25 @@
-<p>This is the partial for view 3.</p>
-
-<div class = "col-sm-6 col-sm-offset-3">
-
-	<h1>When Neil takes a poop</h1>
-		
-		<div class = "reactionCard">
-		{{reactions}}	
-		<div class = "reactionCard" ng-repeat = "r in reactions">	
-				 				
-				<iframe ng-src={{trust(r.gif)}} width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe> 
-				
-				<br>
-				
-				<p>Submitted by {{r.author}} 
-				</p>
-				
-				
-			
+<div class="jumbotron col-sm-12">
+	<center>
+		<div class = "container">
+	<h1>When Neil takes a poop after indian tikka masala from Naan n Curry...</h1>	
 		</div>
+	</center>
+</div>
+
+
+<div class = "col-sm-12 col-sm-offset-1">		
+
+	<div class = "reactionCard" ng-repeat = "r in reactions">	
+
+		<iframe ng-src={{trust(r.gif)}} width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe> 
+
+		<br>
+
+		<p>Submitted by {{r.author}} 
+		</p>
+
+
 
 	</div>
+
+</div>
